Upgrade to Java 9-compatible build #310
Fix generics in test. Upgrade to netty 4.1.8. Upgrade jacoco plugin. Add profile to open packages during test.