@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -58,15 +59,15 @@
         <lettuce-release-version>4.3.1.Final</lettuce-release-version>
         <lettuce3-release-version>3.5.0.Final</lettuce3-release-version>
         <lettuce5-release-version>5.0.0.Beta1</lettuce5-release-version>
-        <netty-version>4.1.7.Final</netty-version>
+        <netty-version>4.1.8.Final</netty-version>
     </properties>
 
     <scm>
         <connection>scm:git:https://github.com/mp911de/lettuce.git</connection>
         <developerConnection>scm:git:https://github.com/mp911de/lettuce.git</developerConnection>
         <url>http://github.com/mp911de/lettuce</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <prerequisites>
         <maven>3.0</maven>
@@ -287,11 +288,31 @@
         <profile>
             <id>netty-40</id>
             <properties>
-               <netty-version>4.0.43.Final</netty-version>
+                <netty-version>4.0.43.Final</netty-version>
             </properties>
         </profile>
+
         <profile>
             <id>netty-41</id>
+        </profile>
+
+        <profile>
+            <id>java9</id>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <profile>
@@ -448,7 +469,7 @@
                                     <arguments>
                                         <argument>-Xmx2G</argument>
                                         <argument>-classpath</argument>
-                                        <classpath />
+                                        <classpath/>
                                         <argument>org.openjdk.jmh.Main</argument>
                                         <argument>.*</argument>
                                         <argument>-tu</argument>
@@ -517,7 +538,8 @@
                         <link>http://docs.guava-libraries.googlecode.com/git/javadoc/</link>
                         <link>http://reactivex.io/RxJava/javadoc/</link>
                     </links>
-                    <additionalparam>-Xdoclint:all -Xdoclint:-html -Xdoclint:-syntax -Xdoclint:-missing</additionalparam>
+                    <additionalparam>-Xdoclint:all -Xdoclint:-html -Xdoclint:-syntax -Xdoclint:-missing
+                    </additionalparam>
                     <tags>
                         <tag>
                             <name>generated</name>
@@ -593,7 +615,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.5.201505241946</version>
+                <version>0.7.9</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
